--- a/ReadMe
+++ b/ReadMe
@@ -1,38 +1,30 @@
-Пояснительная записка.
+![img.png](img.png)
+Номер варианта 63. Номер задания 7. Номер функции 5.
+Функция - выполнить сортировку Шелла.
 
-описание полученного задания;
 
-Вариант 63.
-Номер задания 7. Номер функции 5.
+Требуемые метрики:
 
-Обобщенный артефакт, используемый в задании	Базовые альтернативы(уникальные параметры, задающие отличительные признаки альтернатив	Общие для всех альтернатив переменные	Общие для всех альтернатив функции
-12.Животные	1. Рыбы (место проживания – перечислимый тип: река, море, озеро…)
-2. Птицы (отношение к перелету: перелетные, остающиеся на зимовку – булевская величина)
-3. Звери (хищники, травоядные, насекомоядные… – перечислимый тип)	1. Название – строка символов,
-2. Вес в граммах (целое)	Частное от деления суммы кодов незашифрованной строки на вес (действительное число)
-5.Упорядочить элементы контейнера по возрастанию используя сортировку Шелла (Shell Sort). В качестве ключей для сортировки и других действий используются результаты функции, общей для всех альтернатив.
+N	
+Произошла ли запись на диск	  
+Время
+100	Да	3ms
+1000	Да	100ms
+10000	Да	16113ms
+100	    Да	101ms
+1000	Нет	115ms
+10000	Нет	15631ms
 
-структурная схема изучаемой архитектуры ВС с размещенной на ней разработанной программы; схема
 
-требуемые метрики, определяющие характеристики программы, для различных тестовых прогонов.
+Данные, демонстрирующие сравнение с характеристиками ранее разработанных программ.
 
-N	Произошла ли запись на диск	Время
-100	Да	4ms
-1000	Да	130ms
-10000	Да	16103ms
-100	Нет	1ms
-1000	Нет	116ms
-10000	Нет	15741ms
-данные, демонстрирующие сравнение с характеристиками ранее разработанных программ.
+Достоинства: меньше исходного кода, при чем довольно ощутимо.
 
-Достоинства: меньше исходного кода (размер исходников: 14.8КБ vs 20.5КБ)
+Минусы: увеличился размер скомпилировного кода. Видимо из-за смены языка, ведь С более высокоуровневый.
 
-Минусы: больше размер скомпилированного кода (59КБ vs 55КБ). Видимо связано с переходом с C на C++. Также появились новые сущности (например, vtable).
-
-основные характеристики программы:
+Основные характеристики программы:
 
 Число заголовочных файлов: 6
-Число модулей реализации: 6 (не считая main)
-Общий размер исходных текстов: 14,8 КБ
-Размер .exe: 181 КБ
-Размер Unix Executable: 59 КБ
+Число модулей реализации: 6 - не считая Main
+Общий размер исходных текстов: 9,4 КБ
+Размер .exe: -
